- added Function to find Steam Games - added Custom Interface - added Missing Classes - added a ListFilter

--- a/SteamGamesExporter/SteamGamesExporter.csproj
+++ b/SteamGamesExporter/SteamGamesExporter.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Classes\Steam\Category.cs" />
     <Compile Include="Classes\Steam\ContentDescriptors.cs" />
     <Compile Include="Classes\Steam\DetailView.cs" />
+    <Compile Include="Classes\Steam\Fullgame.cs" />
     <Compile Include="Classes\Steam\Genre.cs" />
     <Compile Include="Classes\Steam\LinuxRequirements.cs" />
     <Compile Include="Classes\Steam\MacRequirements.cs" />
